javascript.svg fix / firefox:form backcard fix / firefox:profil picture in desktop screen fix / skill span alignment fix

--- a/src/input.css
+++ b/src/input.css
@@ -64,6 +64,7 @@ nav a:hover{
     width: 100px;
     border-radius: 50%;
     position: absolute;
+    margin: auto;
     opacity: 0;
     transform: scale(0);
     z-index: 1;
@@ -92,6 +93,7 @@ nav a:hover{
 #flip_card_inner{
     
     transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
 }
 
 #flip_card_front, #flip_card_back{
@@ -128,4 +130,8 @@ nav a:hover{
 ::-webkit-scrollbar{
     height: 0;
     width: 0;
+}
+#slider_container{
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
